# boxlite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.github/workflows/: README.md  build-java.yml  build-node.yml  build-runtime.yml  build-wheels.yml
boxlite/: Cargo.toml  build.rs
boxlite-cli/: Cargo.toml  build.rs
boxlite-cli/src/: cli.rs  main.rs
boxlite-cli/src/commands/: create.rs  exec.rs  info.rs  logs.rs  mod.rs  run.rs
boxlite-cli/tests/: run.rs
boxlite-shared/: Cargo.toml
boxlite/src/: lib.rs
boxlite/src/db/: boxes.rs  mod.rs  schema.rs  snapshots.rs
boxlite/src/disk/: constants.rs  ext4.rs  image.rs  mod.rs  qcow2.rs  qemu_img.rs
boxlite/src/jailer/: builder.rs  bwrap.rs  command.rs  mod.rs  pre_exec.rs  (+1 more)
boxlite/tests/: execution_shutdown.rs  lifecycle.rs  pid_file.rs  rest_integration.rs  shutdown.rs
docs/getting-started/: README.md  quickstart-nodejs.md  quickstart-python.md  quickstart-rust.md
docs/guides/: README.md
docs/reference/: README.md
examples/node/: README.md
examples/python/: README.md  _helpers.py  cmd_user_example.py  interactive_claude_example.py  interactive_claude_ubuntu_example.py
guest/: Cargo.toml
guest/src/: main.rs
openapi/: rest-sandbox-open-api.yaml
openapi/reference-server/: README.md  server.py
scripts/setup/: setup-common.sh
sdks/c/: Cargo.toml
sdks/java/: README.md  build.gradle.kts  plan.md  settings.gradle.kts
sdks/java/native/: Cargo.toml
sdks/java/native/src/: lib.rs
sdks/node/: Cargo.toml  package.json
sdks/python/: Cargo.toml  README.md  pyproject.toml
(+161 files in other folders)
