[package]
name = "boxlite-java-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Java JNI bindings for BoxLite"

[lib]
name = "boxlite_java_native"
crate-type = ["cdylib"]

[dependencies]
boxlite = { path = "../../../boxlite" }
futures = "0.3"
jni = "0.21"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
